syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.openobserve.cluster";
option java_outer_classname = "planProto";

package cluster;
 
import "datafusion_common/datafusion_common.proto";
import "datafusion/datafusion.proto";
import "cluster/common.proto";

message NewEmptyExecNode {
    string                                 name = 1;
    datafusion_common.Schema             schema = 2;
    repeated uint64                  projection = 3;
    repeated datafusion.LogicalExprNode filters = 4;
    optional uint64                       limit = 5;
    bool                         sorted_by_time = 6;
}

// Search request
message FlightSearchRequest {
    string                       trace_id = 1;
    uint32                      partition = 2;
    string                         org_id = 3;
    string                    stream_type = 4;
    bytes                            plan = 6;
    repeated FileKey            file_list = 7;
    repeated KvItem            equal_keys = 8;
    repeated string        match_all_keys = 9;
    int64                     start_time = 10;
    int64                       end_time = 11;
    int64                        timeout = 12;
    bool                is_super_cluster = 13;
    optional string           work_group = 14;
    optional string              user_id = 15;
    optional string    search_event_type = 16;
}

message KvItem {
    string   key = 1;
    string value = 2;
}